c4prj1_deck/grade.txt
Grading at Sun Mar 31 20:02:02 UTC 2019
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:90:35: error: incompatible type for argument 2 of ‘add_card_to’
       add_card_to(excluded_cards, hands[i]->cards[j]);
                                   ^
deck.c:51:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘card_t * {aka struct card_tag *}’
 void add_card_to(deck_t * deck, card_t c) {
      ^
deck.c:94:3: error: ‘return’ with no value, in function returning non-void [-Werror]
   return;
   ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
